# Embedded-Training-Tasks

Task 1/: CMakeLists.txt  main.c
Task 2/: main.c
Task 3/: CMakeLists.txt  main.c
Task 4/: CMakeLists.txt
Task 4/Application/: app.c  app.h
Task 4/Card/: card.c  card.h
Task 4/Server/: server.c  server.h
Task 4/Terminal/: terminal.c  terminal.h
Task 5/: Task 5.docx
Task 6/: Task 6.m4a
Task 6/Task 6/: Task 6.atsln
Task 6/Task 6/Task 6/: DIO_utilites.h  main.c
Task 7/: Task 7.m4a
Task 7/Task 7/: Task 7.atsln
Task 7/Task 7/Task 7/: DIO_Functions.c  DIO_reg.h  TIMERS_Functions.h  main.c  std_type.h
Task 8/: Task 8.m4a
Task 8/Task 8/: Task 8.atsln
Task 8/Task 8/Task 8/: DIO_Functions.h  TIMERS_Functions.c  main.c
